# computer_vision_in_Cpp

./: .gitignore  CMakeLists.txt  README.md  cudaDeviceInfo.cpp  testgcc_compiler.cpp  video_capture.cpp
